fix subpages content need more space after navbar fix footer logo and address to align right on desktop and align center on mobile

--- a/new-theme/codeitforward-fraserriverkeeper-55b4015eebad647b23000001/_navbar.scss
+++ b/new-theme/codeitforward-fraserriverkeeper-55b4015eebad647b23000001/_navbar.scss
@@ -605,6 +605,7 @@
 .navbar-subpages
 {
   background-color: #69BFEB;
+  margin-bottom: 84px;
 }
 
 // Inverse navbar
@@ -766,6 +767,12 @@
   {
     margin-top: -3px;
   }
+
+  .navbar-subpages
+  {
+    margin-bottom: 0;
+  }
+
 
   .navbar-collapse
   {
